Added User Generator API

--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
         
         <button id="pass-button">Sign In</button>
         <br>
-    </div>
-    
-    <div id='user-gen'>
+    </div> <br>
 
+    <div id='user-api'>
+        <h2>Customer User Generator</h2>
+        <button id="user-gen">Generate Customers</button>
     </div>
+    <div id="output"></div>
 
     <!--jQuery CDN-->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
