--- a/about-us.html
+++ b/about-us.html
@@ -1,12 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>King's Restaurant</title>
+    <title>King's Restaurant - About Us</title>
+    <!-- Bootstrap CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <!--CSS-->
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <!--Navbar-->
+    <div>
+        <nav class="navbar fixed-top navbar-expand-lg bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">King's Restaurant</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Menu
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end bg-dark" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#starters">Starters</a></li>
+                                <li><a class="dropdown-item" href="#main-courses">Main Courses</a></li>
+                                <li><a class="dropdown-item" href="#desserts">Desserts</a></li>
+                                <li><a class="dropdown-item" href="#drinks">Drinks</a></li>
+                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#staff_pass">Staff Login</a>
+                        </li>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+
+    <!--Restaurant Timeline Using Timeline Js-->
+    <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1Gj5ENNPHGdSXzerUuT46mWJfVSENAJweOG5pPz5-h8k&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+
+    <main>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h5 class="display-6 page-title p-2 m-2">About King's Restaurant</h5>
+                    <h4 class="p-2 text-light m-2 sub-title">EAT GOOD, DO GOOD</h4><hr class="text-light">
+                </div>
+                <div class="col-lg-6">
+                    <div class="pic1"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="pic2"></div>
+                </div>
+                <div class="col-lg-6">
+                    <h4 class="pt-5 text-light m-2 sub-title">INGREDIENTS OF THE HIGHEST QUALITY</h4><hr class="text-light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <h4 class="pt-5 text-light m-2 sub-title">DRINKS WITH FRIENDS</h4><hr class="text-light">
+                </div>
+                <div class="col-lg-6">
+                    <div class="pic3"></div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!--Bootstrap JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <!--jQuery CDN-->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <!--JavaScript Script-->
+    <script src="script.js"></script>
+    <!--Font Awesome CDN-->
+    <script src="https://kit.fontawesome.com/5bdb480a77.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
