--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>King's Restaurant</title>
     <!-- Bootstrap CSS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!--CSS-->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
     <!--Navbar-->
     <div>
         <nav class="navbar fixed-top navbar-expand-lg bg-dark">
@@ -31,7 +29,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link" href="/about-us.html">About Us</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -59,14 +57,14 @@
 
     <!--Jumbotron with Background Image-->
     <div class="container py-5">
-        <div class="jumbotron text-white shadow text-center">
-            <h2 class="mb-4">
-                Welcome to King's Restaurant
-            </h2>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="jumbotron text-white shadow text-center"></div>
+                <hr class="bg-light">
+            </div>
         </div>
     </div>
 
-    <hr>
     <main>
         <!--Staff Password Validator & API User Generator -->
         <div class="container-fluid">
@@ -74,9 +72,9 @@
             <div class="row">
                 <div class="col-sm-6 text-center">
                     <div id="staff_pass">
-                        <h2 class="display-5">Staff Login</h2><br>
+                        <h2 class="display-5 staff-title">Staff Login</h2><br>
                         <input id="pass" class="text-center" placeholder="Password" type="password"></p>
-                        <label id="invalid"><p><small>Your password should contain at least eight characters and at least one upper case letter, one lower case letter, one number and one special character (!,@,#,$,%,^,&,*,(,)). Please update it and try again.</small></p>
+                        <label id="invalid"><p class="text-light"><small>Invalid Password, your password should contain at least eight characters and at least one upper case letter, one lower case letter, one number and one special character(!,@,#,$,%,^,&,*,(,)). Please update it and try again.</small></p>
                         </label>
                         <label id="valid"><u>Valid Password!</u><br></label>
                         <button class="btn btn-light" id="pass-button">Sign In</button>
@@ -86,10 +84,10 @@
                 <!--Customer API Generator-->
                 <div class="col-sm-6 text-center">
                     <div id='user-api'>
-                        <h2 class="display-5">Customer User Generator</h2><br>
+                        <h2 class="display-5 staff-title">Customer User Generator</h2><br>
                         <button class="btn btn-light" id="user-gen">Generate Customers</button><br>
                     </div>
-                    <div id="output" class="users"></div>
+                    <div id="output" class="users text-light pr-5"></div>
                 </div>
             </div>
         </div>
@@ -117,7 +115,8 @@
                                             <span class="dish-meta">Chicken / Mixed Leaves / sauce</span>
                                             <div class="dish-price">
                                                 <p>€8.95</p>
-                                                <input class="text-center" type="text" name="item_1" id="item_1" data-price="8.95" value="0" size="3">
+                                                <input class="text-center" type="text" name="item_1" id="item_1"
+                                                    data-price="8.95" value="0" size="3">
                                             </div>
                                         </div>
                                     </div>
@@ -131,7 +130,8 @@
                                             <span class="dish-meta">Rocket / Garlic / Bread </span>
                                             <div class="dish-price">
                                                 <p>€6.95</p>
-                                                <input class="text-center" name="item_2" placeholder="Quantity"type="text" id="item_2" data-price="6.95" value="0" size="3">
+                                                <input class="text-center" name="item_2" placeholder="Quantity"
+                                                    type="text" id="item_2" data-price="6.95" value="0" size="3">
                                             </div>
                                         </div>
                                     </div>
@@ -146,7 +146,8 @@
                                             <span class="dish-meta">Potato / Onion / carrot</span>
                                             <div class="dish-price">
                                                 <p>€5.45</p>
-                                                <input placeholder="Quantity" class="text-center veg_1" name="item_3" type="text" id="item_3" data-price="5.45" value="0" size="3">
+                                                <input placeholder="Quantity" class="text-center veg_1" name="item_3"
+                                                    type="text" id="item_3" data-price="5.45" value="0" size="3">
                                             </div>
                                         </div>
                                     </div>
@@ -166,7 +167,8 @@
                                             <span class="dish-meta"> Shrimp / wine / butter / garlic</span>
                                             <div class="dish-price">
                                                 <p>€15</p>
-                                                <input class="text-center" placeholder="Quantity" type="text" name="item_4" id="item_4" data-price="15" value="0" size="3">
+                                                <input class="text-center" placeholder="Quantity" type="text"
+                                                    name="item_4" id="item_4" data-price="15" value="0" size="3">
                                             </div>
                                         </div>
 
@@ -181,7 +183,8 @@
                                             <span class="dish-meta">Steak / Mashed Potato / Beans</span>
                                             <div class="dish-price">
                                                 <p>€18</p>
-                                                <input class="text-center" placeholder="Quantity" type="text"name="item_5" id="item_5" data-price="18" value="0" size="3">
+                                                <input class="text-center" placeholder="Quantity" type="text"
+                                                    name="item_5" id="item_5" data-price="18" value="0" size="3">
                                             </div>
                                         </div>
 
@@ -196,7 +199,8 @@
                                             <span class="dish-meta"> pumpkin / spinach / pesto</span>
                                             <div class="dish-price">
                                                 <p>€13</p>
-                                                <input class="text-center veg_2" placeholder="Quantity" type="text" name="item_6" id="item_6" data-price="13" value="0" size="3">
+                                                <input class="text-center veg_2" placeholder="Quantity" type="text"
+                                                    name="item_6" id="item_6" data-price="13" value="0" size="3">
                                             </div>
                                         </div>
                                     </div>
@@ -216,7 +220,8 @@
                                             <span class="dish-meta">Apple / Cream / Ice-Cream</span>
                                             <div class="dish-price">
                                                 <p>€5.20</p>
-                                                <input class="text-center" placeholder="Quantity" type="text" name="item_7" id="item_7" data-price="5.20" value="0" size="3">
+                                                <input class="text-center" placeholder="Quantity" type="text"
+                                                    name="item_7" id="item_7" data-price="5.20" value="0" size="3">
                                             </div>
                                         </div>
                                     </div>
@@ -231,7 +236,8 @@
                                             </span>
                                             <div class="dish-price">
                                                 <p>€5.70</p>
-                                                <input class="text-center" placeholder="Quantity" type="text" name="item_8" id="item_8" data-price="5.70" value="0" size="3">
+                                                <input class="text-center" placeholder="Quantity" type="text"
+                                                    name="item_8" id="item_8" data-price="5.70" value="0" size="3">
                                             </div>
                                         </div>
                                     </div>
@@ -246,7 +252,8 @@
                                             </span>
                                             <div class="dish-price">
                                                 <p>€6.45</p>
-                                                <input class="text-center" placeholder="Quantity" type="text" name="item_9" id="item_9" data-price="6.45" value="0" size="3">
+                                                <input class="text-center" placeholder="Quantity" type="text"
+                                                    name="item_9" id="item_9" data-price="6.45" value="0" size="3">
                                             </div>
                                         </div>
                                     </div>
@@ -266,7 +273,8 @@
                                             <span class="dish-meta">Dutch Beer</span>
                                             <div class="dish-price">
                                                 <p>€5.50</p>
-                                                <input class="text-center" placeholder="Quantity" type="text" name="item_10" id="item_10" data-price="5.50" value="0" size="3">
+                                                <input class="text-center" placeholder="Quantity" type="text"
+                                                    name="item_10" id="item_10" data-price="5.50" value="0" size="3">
                                             </div>
                                         </div>
                                     </div>
@@ -280,7 +288,8 @@
                                             <span class="dish-meta">Rum / Soda / Lime / Sugar </span>
                                             <div class="dish-price">
                                                 <p>€7.30</p>
-                                                <input class="text-center" placeholder="Quantity" type="text" name="item_11" id="item_11" data-price="7.30" value="0" size="3">
+                                                <input class="text-center" placeholder="Quantity" type="text"
+                                                    name="item_11" id="item_11" data-price="7.30" value="0" size="3">
                                             </div>
                                         </div>
                                     </div>
@@ -294,13 +303,13 @@
                                             <span class="dish-meta">Orange / Sugar / Ice</span>
                                             <div class="dish-price">
                                                 <p>€4.20</p>
-                                                <input class="text-center" placeholder="Quantity" type="text" name="item_12" id="item_12" data-price="4.20" value="0" size="3">
+                                                <input class="text-center" placeholder="Quantity" type="text"
+                                                    name="item_12" id="item_12" data-price="4.20" value="0" size="3">
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            
                         </div>
                     </div>
                     <!--Bill-->
@@ -327,7 +336,6 @@
                                             <h5 class="dish-title" id="drinksBill">Drinks: €</h5><br>
                                             <h5 class="dish-title" id="vegBill">Vegetarian: €</h5><br>
                                             <h5 class="dish-title" id="nonvegBill">Non-Vegetarian: € </h5>
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -336,17 +344,55 @@
                     </div>
                 </div>
             </div>
+        </div>
     </main>
+    <!--Footer-->
+    <footer class="bg-dark">
+        <div class="mt-5 pt-5 pb-5 footer bg-dark">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-xs-12 about-company">
+                        <h4 class="mt-lg-0 mt-sm-4 display-6">Contact Us</h4><hr class="bg-light">
+                        <p class="pr-5 text-justify">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within a matter of hours to help you.</p>
+                        <p class="mb-0"><i class="fa fa-phone mr-3"></i>+353 (01) 2862525</p>
+                        <p><i class="fa fa-envelope-o mr-3"></i> kings.restaurant@gmail.com</p>
+                        <p class="social-media">
+                            <a href="#"><i class="fab fa-facebook-f fa-lg"></i></a>
+                            <a href="#"><i class="fab fa-twitter fa-lg"></i></a>
+                            <a href="#"><i class="fab fa-instagram fa-lg"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in fa-lg"></i></a>
+                            <a href="#"><i class="fab fa-youtube fa-lg"></i></a>
+                        </p>
+                    </div>
+
+                    <div class="col-lg-4 col-xs-12 about-company">
+                        <h4 class="mt-lg-0 mt-sm-4 display-6">Opening Hours</h4><hr class="bg-light">
+                        <p class="pr-5 text-center">Monday | Tuesday | Wednesday | 10 PM – 8 PM Thursday | Friday | 11 PM – 8 PM <br>Saturday | Sunday 12 PM – 9 PM</p>
+                    </div>
+
+                    <div class="col-lg-4 col-xs-12 location">
+                        <h4 class="mt-lg-0 mt-sm-4 display-6">Location</h4><hr class="bg-white">
+                        <p>4 Florence Terrace, Florence Road, Bray, County Wicklow, Ireland</p>
+                        <div class="text-center shadow-5"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2389.780878708507!2d-6.1043848841669!3d53.2038458799494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4867a868cb470199%3A0x3b47ecb4afd7acb!2s4%20Florence%20Terrace%2C%20Bray%2C%20Co.%20Wicklow!5e0!3m2!1sen!2sie!4v1620292022324!5m2!1sen!2sie" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+                    </div>
+                </div>
+                <div class="row mt-5 text-center">
+                    <div class="col copyright">
+                        <p class=""><small class="text-white-50">© 2021 Copyright: Danrlei Martins.  All Rights Reserved.</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!--Bootstrap JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <!--jQuery CDN-->
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!--JavaScript Script-->
     <script src="script.js"></script>
+    <!--Font Awesome CDN-->
+    <script src="https://kit.fontawesome.com/5bdb480a77.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
